store.js: implemented that cart form elements are disabled upon some action; _registration-form.html.twig: fixed terms checkout not showing error message; _forms.scss: focus has now a new light blue shadow, while invalid (error) fields have a light red shadow;

--- a/assets/css/store/bootstrap-theme/bootstrap/_buttons.scss
+++ b/assets/css/store/bootstrap-theme/bootstrap/_buttons.scss
@@ -27,8 +27,8 @@
 
   &:focus,
   &.focus {
-    //outline: 0;
-    //box-shadow: $btn-focus-box-shadow;
+    outline: 0;
+    box-shadow: $btn-focus-box-shadow;
   }
 
   // Disabled comes first so active can properly restyle
