--- a/assets/css/store/bootstrap-theme/bootstrap/_modal.scss
+++ b/assets/css/store/bootstrap-theme/bootstrap/_modal.scss
@@ -220,6 +220,7 @@ $zindex-modal-close         : $zindex-modal + 1 !default;
 
     &:hover,
     &:focus {
+      outline: none;
       opacity: 1 !important;
       background-color: $modal-close-hover-bg;
     }
